Changed the background color of user messages to #1e1e1e.

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ button.btn-primary:hover {
 }
 
 .message.user .message-content {
-  background-color: #007bff;
+  background-color: #1e1e1e;
   color: #fff;
 }
 
